--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-icons": "^4.2.0",
-    "react-modal": "^3.15.1"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
